<resources>
    <string name="app_name">InfoCity</string>
    <string name="no_internet_dialog_title">Problema de Conexão</string>
    <string name="go_to_internet_settings">Ir para configurações sem fio e rede?</string>
    <string name="settings">Configurações</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Adicionar</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="close">Fechar</string>
    <string name="type">Tipo</string>
    <string name="unknown">Desconhecido</string>
    <string name="keywords">Palavras-Chave</string>
    <string name="keyword">Palavra-Chave</string>
    <string name="no_keywords">-</string>
    <string name="getting_pos">Buscando localização</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="alert">Alerta</string>
    <string name="cancel_addevent">Tem certeza de que deseja cancelar a adição do evento?</string>
    <string name="done">Pronto</string>
    <string name="remove">Remover</string>
    <string name="saving_event">Salvando evento no servidor.</string>
    <string name="server_error">Erro no servidor.</string>
    <string name="conn_error">Erro de conexão com o servidor.</string>
    <string name="save_success">Evento salvo com sucesso!</string>
    <string name="drag_image">Imagem para arrasto.</string>
    <string name="close">Fechar</string>
    <string name="refresh">Recarregar</string>
    <string name="pref_events">Eventos</string>
    <string name="pref_events_summary">Detalhes extras para a filtragem de eventos.</string>
    <string name="pref_event_radius_summary">Distância máxima (em metros) de um evento a partir da localização atual.</string>
    <string name="pref_event_radius_title">Distância máxima</string>
    <string name="only_numbers">Apenas números são aceitos.</string>
    <string name="preferences">Preferências</string>
    <string name="not_empty">Campo não pode ser vazio.</string>
    <string name="pref_server">Servidor</string>
    <string name="pref_server_summary">Informações sobre o endereço IP e porta do servidor.</string>
    <string name="pref_server_ip_title">Endereço IP</string>
    <string name="pref_server_ip_summary">Endereço IP do servidor.</string>
    <string name="pref_server_port_title">Porta</string>
    <string name="pref_server_port_summary">Porta do servidor.</string>
    <string name="invalid_ip">Endereço IP inválido.</string>
    <string name="invalid_port">Porta inválida.</string>
    <string name="map">Mapa</string>
    <string name="pref_map_summary">Configurações referentes ao mapa.</string>
    <string name="compass">Bússula</string>
    <string name="curr_location">Minha localização</string>
    <string name="enable_compass">Bússula</string>
    <string name="active_mylocation">Localização atual mostrada como um ponto azul no mapa.
        \nObs.: Este ponto pode demorar um pouco a aparecer.</string>
    <string name="inactive_mylocation">Localização atual não mostrada.</string>
    <string name="active_compass">Bússula visível.</string>
    <string name="inactive_compass">Bússula não visível</string>
    <string name="install_barcodescanner">Instalar BarcodeScanner?</string>
    <string name="requires_barcodescanner">Essa aplicação requer BarcodeScanner. Deseja instalar essa aplicação?</string>
    <string name="fetch_with_qrcode">Buscar eventos via QrCode</string>
    <string name="type">Tipo</string>
    <string name="qrcode_error">Erro de leitura do Qr-Code.</string>
    <string name="bus">Ônibus</string>
    <string name="event">Evento</string>
    <string name="refresh_events">Recarregar Eventos</string>
    <string name="select_source">Selecione a Fonte</string>
    <string name="other">Outro</string>
    <string name="health">Saúde</string>
    <string name="report">Denúncia</string>
    <string name="filters">Filtros</string>
    <string name="filters_summary">Filtragem na busca de eventos pelo seu tipo.</string>
    <string name="pref_filters_types_list">Selecione o tipo de evento que você deseja usar como filtro.</string>
    <string name="pref_filters_types_title">Filtrar eventos</string>
    <string name="all">Todos</string>
    <string name="shopping">Compras</string>
    <string name="login">Log In</string>
    <string name="login_descr">Fazer login.</string>
    <string name="cancelled">Cancelado</string>
    <string name="facebook_permission_not_granted">Permissão não concedida.</string>
    <string name="app_id">509896059044144</string>
    <string name="like">Gostar</string>
    <string name="dislike">Desgostar</string>
    <string name="no_fetched_events">Nenhum evento encontrado.</string>
    <string name="prefs_max_events_summary">Número máximo de eventos a serem buscados.</string>
    <string name="prefs_max_events_title">Limite de eventos</string>
    <string name="suggestion">Sugestão</string>
    <string name="loading_comments">Carregando comentários</string>
    <string name="no_comments">Nenhum comentário feito.</string>
    <string name="add_comment">Comentar</string>
    <string name="comment_not_empty">Comentário não pode ser vazio.</string>
    <string name="comments">Comentários</string>
    <string name="cannot_comment">Você precisa estar logado para comentar.</string>
</resources>
