<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_events"
        android:summary="@string/pref_events_summary">
        <EditTextPreference 
            android:key="event_radius"
            android:summary="@string/pref_event_radius_summary"
            android:title="@string/pref_event_radius_title"
            android:defaultValue="50000"
            android:numeric="decimal"/>
        <EditTextPreference 
            android:key="max_events"
            android:summary="@string/prefs_max_events_summary"
            android:title="@string/prefs_max_events_title"
            android:defaultValue="10"
            android:numeric="integer"/>
        <ListPreference 
            android:key="filters_eventtype"
            android:title="@string/pref_filters_types_title"
            android:summary="@string/pref_filters_types_list"/>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/map"
        android:summary="@string/pref_map_summary">
        <CheckBoxPreference
            android:key="enable_mylocation"
            android:title="@string/curr_location"
            android:summaryOn="@string/active_mylocation"
            android:summaryOff="@string/inactive_mylocation"
            android:checked="true"/>
        <CheckBoxPreference
            android:key="enable_compass"
            android:title="@string/enable_compass"
            android:summaryOn="@string/active_compass"
            android:summaryOff="@string/inactive_compass"
            android:checked="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_server"
        android:summary="@string/pref_server_summary">
        <EditTextPreference 
            android:key="server_ip"
            android:summary="@string/pref_server_ip_summary"
            android:title="@string/pref_server_ip_title"
            android:defaultValue="192.168.1.5"/>
        <EditTextPreference 
            android:key="server_port"
            android:summary="@string/pref_server_port_summary"
            android:title="@string/pref_server_port_title"
            android:defaultValue="8000"
            android:numeric="integer"/>
    </PreferenceCategory>
</PreferenceScreen>